--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 
 
     	<p>lorum lorum lorum lorum lorum lorum lorum lorum lorum lorum lorum </p>
+
+
+    	<footer>Fake footer</footer>
     	
 
     </body>
