added some random div tag

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
 
     	<p>lorum lorum lorum lorum lorum lorum lorum lorum lorum lorum lorum </p>
 
+
+
+    <div>Some random div tag</div>
   </main>
 
     	<footer>Fake footer</footer>
